# showidea

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  showidea.pro  toolbar.cpp  toolbar.h
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  showidea.qrc  version.sh
